<resources>
    <string name="app_name">Online-shop</string>
    <string name="login">LOGIN</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="more_than_6_characters">More than 6 characters</string>
    <string name="already_have_an_account_sign_in">Already have an account ? Sign in</string>
    <string name="create_your_free_account">Create Your free Account</string>
    <string name="username">Username:</string>
    <string name="profile_information">User Information</string>
    <string name="user">User</string>
    <string name="wishlist">Wishlist</string>
    <string name="card">Card</string>
    <string name="home">Home</string>
    <string name="reset_password">Reset Password</string>
    <string name="logout">Logout</string>
    <string name="phone_number">Phone number:</string>
    <string name="update_information">Update information</string>
</resources>